K8s/manifests/ingress_resource.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a59c28d6cc8ee4808be4ca5bbc3ff5bf-a960e8927104c0f2.elb.us-east-1.amazonaws.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-web-app
            port:
              number: 80
# mohit-three-tier-eks.local
